lib_LTLIBRARIES = libtpd_common.la
libtpd_common_la_LDFLAGS = -no-undefined
libtpd_common_ladir=$(includedir)/toped_$(PACKAGE_VERSION)/tpd
noinst_HEADERS = avl_def.h avl.h polycross.h tpdph.h tuidefs.h
libtpd_common_la_HEADERS = ttt.h outbox.h tedbac.h MemTrack.h
libtpd_common_la_SOURCES = avl.cpp outbox.cpp polycross.cpp tpdph.cpp \
	tedbac.cpp ttt.cpp MemTrack.cpp
