SUBDIRS_MAIN = ui                                         \
               tpd_common                                 \
               tpd_GL                                     \
               tpd_DB                                     \
               tpd_ifaces                                 \
               tpd_parser                                 \
               tpd_bidfunc                                \
               src                                        \
               fonts                                      \
               icons                                      \
               tll                                        \
               utils/cadence
SUBDIRS =   $(SUBDIRS_MAIN)
ACLOCAL_AMFLAGS = -I macros
