EXTRA_DIST = activelay.xpm nolay.xpm \
             cellfg.xpm cellf.xpm cellhg.xpm cellh.xpm \
             cellundef.xpm librarydb.xpm targetdb.xpm \
             cellhg_g.xpm cellh_g.xpm cellfg_g.xpm cellf_g.xpm \
             crosscursor.xpm \
             lock.xpm red_lamp.xpm green_lamp.xpm blue_lamp.xpm \
             toped16x16.xpm toped32x32.xpm \
             toped.desktop \
             toped_16x16.png toped_32x32.png toped_64x64.png \
             funchelp.txt

tpd_appsdir = $(datadir)/applications
tpd_apps_DATA = toped.desktop
tpd_icondir = $(pkgdatadir)/icons
tpd_icon_DATA = toped_16x16.png toped_32x32.png toped_64x64.png
tpd_miscdir = $(pkgdatadir)/ui
tpd_misc_DATA = funchelp.txt
