iconsdir = $(pkgdatadir)/icons/16x16

EXTRA_DIST =           box.png \
                      copy.png \
                   cut_box.png \
                    delete.png \
                  edit_pop.png \
                 edit_push.png \
                     flipx.png \
                     flipy.png \
                      move.png \
                       new.png \
                      open.png \
                      poly.png \
                      redo.png \
               rotate_left.png \
              rotate_right.png \
                     ruler.png \
                      save.png \
                      text.png \
                      undo.png \
                      wire.png \
                  zoom_all.png \
                   zoom_in.png \
                  zoom_out.png \
                     group.png \
                   ungroup.png \
                     merge.png \
                    select.png \
                  unselect.png

icons_DATA =           box.png \
                      copy.png \
                   cut_box.png \
                    delete.png \
                  edit_pop.png \
                 edit_push.png \
                     flipx.png \
                     flipy.png \
                      move.png \
                       new.png \
                      open.png \
                      poly.png \
                      redo.png \
               rotate_left.png \
              rotate_right.png \
                     ruler.png \
                      save.png \
                      text.png \
                      undo.png \
                      wire.png \
                  zoom_all.png \
                   zoom_in.png \
                  zoom_out.png \
                     group.png \
                   ungroup.png \
                     merge.png \
                    select.png \
                  unselect.png

