iconsdir = $(pkgdatadir)/icons/16x16

EXTRA_DIST =       new_box.png \
                      copy.png \
                   cut_box.png \
                    delete.png \
                  edit_pop.png \
                 edit_push.png \
                 flip_hori.png \
                 flip_vert.png \
                      move.png \
                  new_poly.png \
                rotate_ccw.png \
                 rotate_cw.png \
                     ruler.png \
                  new_text.png \
                      undo.png \
                  new_wire.png \
                  zoom_all.png \
                   zoom_in.png \
                  zoom_out.png \
                     group.png \
                   ungroup.png \
                     merge.png \
                    select.png \
                  unselect.png

icons_DATA =       new_box.png \
                      copy.png \
                   cut_box.png \
                    delete.png \
                  edit_pop.png \
                 edit_push.png \
                 flip_hori.png \
                 flip_vert.png \
                      move.png \
                  new_poly.png \
                rotate_ccw.png \
                 rotate_cw.png \
                     ruler.png \
                  new_text.png \
                      undo.png \
                  new_wire.png \
                  zoom_all.png \
                   zoom_in.png \
                  zoom_out.png \
                     group.png \
                   ungroup.png \
                     merge.png \
                    select.png \
                  unselect.png

